[tool.poetry]
name = "cs-backend"
version = "0.1.0"
description = "Backend for the Collective Scrolling extension"
authors = ["Leo Guinan <leo.guinan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
PyJWT = "^2.9.0"
motor = "^3.5.1"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"
python-decouple = "^3.8"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
